# invasive-checke

./: .gitignore  Dockerfile  Dockerfile.tesseract  Makefile  README.md  README.rst  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt  sample.env  setup.cfg  setup.py
app/: main.py
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invasive_checker/: __init__.py  invasive_checker.py  utils.py
notebooks/: 18S.xlsx  Excel Processing.ipynb  README.md  environment.yml  output.xlsx
notebooks/ARMSrun2/: ARMS_ObservatoryInfo.xlsx  ARMS_SpeciesPerObservatory_18S.xlsx  README  README.md
notebooks/data/: ARMS_ObservatoryInfo.xlsx  ARMS_SpeciesPerObservatory_18S.xlsx  ARMS_SpeciesPerObservatory_18S_wrims.xlsx  ARMS_SpeciesPerObservatory_COI.xlsx  ARMS_SpeciesPerObservatory_COI_wrims.xlsx
notebooks/invasive_checker/: __init__.py  utils.py
tests/: __init__.py  test_invasive_checker.py  worms_utput notes.ods
tests/Test1/: input_final_table.csv
tests/output/: WrimsClassification.ods  WrimsClassification.xlsx  all_classification.csv  all_worms.csv  classification.csv  output_classification.csv  output_worms.csv  rory_classification.ods  rory_test_worms.ods  test_classification.csv  test_worms.csv  top30_classification.csv  top30_worms.csv  unpivot.csv  worms.csv  wrims_df.csv
tests/test_012023/: final_table.tsv
tests/test_Dec_2022/: final_table_small.tsv
tests/test_Dec_2022/output/: all_classification.csv  all_worms.csv  unpivot.csv
tests/test_data/: .~lock.final_table.csv#  ARMS_Samples_IJI.csv  final_table_2019_16S_noBlank.csv  input_file.tsv  input_file_small.tsv  top30.csv  worms1.csv
