[tool.poetry]
name = "invasive_checker"
version = "0.1.0"
description = "Use WRIMS + MarineRegions to determine if a given organism+location is invasive or not."
authors = ["Rory Meyer <rory.meyer@vliz.be>"]
readme = "README.md"
packages = [{include = "invasive_checker"}]
license = "MIT"
repository = 'https://github.com/rory/invasive_checker'
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',

]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
shapely = "^2.0.1"
rdflib = "^6.3.2"
poetry = "^1.5.0"

# Development tools
pre-commit = {version = "^3.3.1", optional = true}
isort = {version = "^5.12.0", optional = true}
black = {version = "^23.3.0", optional = true}
flake8 = {version = "^6.0.0", optional = true}
watchdog = {version ="^3.0.0", optional = true}

# Testing tools
pyyaml = {version = "^6.0", optional = true}
pytest = {version = "^7.3.1", optional = true}
coverage = {version = "^7.2.5", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}

# Documentation tools
sphinx = {version = "^7.0.1", optional = true}

# Poetry has the dependecies groups, but those are not 
#   compatible with extras, widely used in the python-verse.
[tool.poetry.extras]
dev = ["pre-commit", "isort", "black", "flake8", "watchdog"]
tests = ["pyyaml","pytest", "coverage", "python-dotenv"]
docs = ["sphinx"]


[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
